--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,7 +32,7 @@
         </nav>
 
         <div class="container-fluid mt-3">
-            <h1>Pashto Lessons</h1>
+            <h1 class="text-center">Pashto Lessons</h1>
 
             <div class="alphabet_intro">
                 <div class="alphabet_text">
