--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/pashto/">Pashto</a>
+                            <a class="nav-link" href="/pashto/">Pashto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=".">Lessons <span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link active" href=".">Lessons <span class="visually-hidden">(current)</span></a>
                         </li>
                     </ul>
                 </div>
