--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -34,8 +34,8 @@
         <div class="container-fluid mt-3">
             <h1 class="text-center">Pashto Lessons</h1>
 
-            <div class="d-flex flex-wrap justify-content-center">
-                <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
+            <div class="d-flex flex-wrap flex-row">
+                <p class="w-75">The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
                         that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
                         languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
                         one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
@@ -45,7 +45,7 @@
                         how I have labeled the letters.
                 </p>
 
-                <img src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+                <img class="w-25" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
             <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
