--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -45,54 +45,54 @@
                         how I have labeled the letters.
                 </p>
 
-                <img class="image-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+                <img class="img-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
             <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
-                <img class="image-thumbnail" src="/assets/alif.png" alt="alif">
-                <img class="image-thumbnail" src="/assets/be.png" alt="be">
-                <img class="image-thumbnail" src="/assets/pe.png" alt="pe">
-                <img class="image-thumbnail" src="/assets/te.png" alt="te">
-                <img class="image-thumbnail" src="/assets/te_accent.png" alt="te_accent">
-                <img class="image-thumbnail" src="/assets/se.png" alt="se">
-                <img class="image-thumbnail" src="/assets/jeem.png" alt="jeem">
-                <img class="image-thumbnail" src="/assets/che.png" alt="che">
-                <img class="image-thumbnail" src="/assets/dze.png" alt="dze">
-                <img class="image-thumbnail" src="/assets/tse.png" alt="tse">
-                <img class="image-thumbnail" src="/assets/he.png" alt="he">
-                <img class="image-thumbnail" src="/assets/xe.png" alt="xe">
-                <img class="image-thumbnail" src="/assets/daal.png" alt="daal">
-                <img class="image-thumbnail" src="/assets/daal_accent.png" alt="daal_accent">
-                <img class="image-thumbnail" src="/assets/zaal.png" alt="zaal">
-                <img class="image-thumbnail" src="/assets/re.png" alt="re">
-                <img class="image-thumbnail" src="/assets/re_accent.png" alt="re_accent">
-                <img class="image-thumbnail" src="/assets/ze.png" alt="ze">
-                <img class="image-thumbnail" src="/assets/zhe.png" alt="zhe">
-                <img class="image-thumbnail" src="/assets/ge.png" alt="ge">
-                <img class="image-thumbnail" src="/assets/seen.png" alt="seen">
-                <img class="image-thumbnail" src="/assets/sheen.png" alt="sheen">
-                <img class="image-thumbnail" src="/assets/xeen.png" alt="xeen">
-                <img class="image-thumbnail" src="/assets/saad.png" alt="saad">
-                <img class="image-thumbnail" src="/assets/zaad.png" alt="zaad">
-                <img class="image-thumbnail" src="/assets/twe.png" alt="twe">
-                <img class="image-thumbnail" src="/assets/zwe.png" alt="zwe">
-                <img class="image-thumbnail" src="/assets/ayn.png" alt="ayn">
-                <img class="image-thumbnail" src="/assets/ghayn.png" alt="ghayn">
-                <img class="image-thumbnail" src="/assets/fe.png" alt="fe">
-                <img class="image-thumbnail" src="/assets/qaaf.png" alt="qaaf">
-                <img class="image-thumbnail" src="/assets/kaaf.png" alt="kaaf">
-                <img class="image-thumbnail" src="/assets/gaaf.png" alt="gaaf">
-                <img class="image-thumbnail" src="/assets/laam.png" alt="laam">
-                <img class="image-thumbnail" src="/assets/meem.png" alt="meem">
-                <img class="image-thumbnail" src="/assets/noon.png" alt="noon">
-                <img class="image-thumbnail" src="/assets/noon_accent.png" alt="noon_accent">
-                <img class="image-thumbnail" src="/assets/waaw.png" alt="waaw">
-                <img class="image-thumbnail" src="/assets/he_small.png" alt="he_small">
-                <img class="image-thumbnail" src="/assets/naareena_ye.png" alt="naareena_ye">
-                <img class="image-thumbnail" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
-                <img class="image-thumbnail" src="/assets/oogda_ye.png" alt="oogda_ye">
-                <img class="image-thumbnail" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
-                <img class="image-thumbnail" src="/assets/filee_ye.png" alt="filee_ye">
+                <img class="img-thumbnail" src="/assets/alif.png" alt="alif">
+                <img class="img-thumbnail" src="/assets/be.png" alt="be">
+                <img class="img-thumbnail" src="/assets/pe.png" alt="pe">
+                <img class="img-thumbnail" src="/assets/te.png" alt="te">
+                <img class="img-thumbnail" src="/assets/te_accent.png" alt="te_accent">
+                <img class="img-thumbnail" src="/assets/se.png" alt="se">
+                <img class="img-thumbnail" src="/assets/jeem.png" alt="jeem">
+                <img class="img-thumbnail" src="/assets/che.png" alt="che">
+                <img class="img-thumbnail" src="/assets/dze.png" alt="dze">
+                <img class="img-thumbnail" src="/assets/tse.png" alt="tse">
+                <img class="img-thumbnail" src="/assets/he.png" alt="he">
+                <img class="img-thumbnail" src="/assets/xe.png" alt="xe">
+                <img class="img-thumbnail" src="/assets/daal.png" alt="daal">
+                <img class="img-thumbnail" src="/assets/daal_accent.png" alt="daal_accent">
+                <img class="img-thumbnail" src="/assets/zaal.png" alt="zaal">
+                <img class="img-thumbnail" src="/assets/re.png" alt="re">
+                <img class="img-thumbnail" src="/assets/re_accent.png" alt="re_accent">
+                <img class="img-thumbnail" src="/assets/ze.png" alt="ze">
+                <img class="img-thumbnail" src="/assets/zhe.png" alt="zhe">
+                <img class="img-thumbnail" src="/assets/ge.png" alt="ge">
+                <img class="img-thumbnail" src="/assets/seen.png" alt="seen">
+                <img class="img-thumbnail" src="/assets/sheen.png" alt="sheen">
+                <img class="img-thumbnail" src="/assets/xeen.png" alt="xeen">
+                <img class="img-thumbnail" src="/assets/saad.png" alt="saad">
+                <img class="img-thumbnail" src="/assets/zaad.png" alt="zaad">
+                <img class="img-thumbnail" src="/assets/twe.png" alt="twe">
+                <img class="img-thumbnail" src="/assets/zwe.png" alt="zwe">
+                <img class="img-thumbnail" src="/assets/ayn.png" alt="ayn">
+                <img class="img-thumbnail" src="/assets/ghayn.png" alt="ghayn">
+                <img class="img-thumbnail" src="/assets/fe.png" alt="fe">
+                <img class="img-thumbnail" src="/assets/qaaf.png" alt="qaaf">
+                <img class="img-thumbnail" src="/assets/kaaf.png" alt="kaaf">
+                <img class="img-thumbnail" src="/assets/gaaf.png" alt="gaaf">
+                <img class="img-thumbnail" src="/assets/laam.png" alt="laam">
+                <img class="img-thumbnail" src="/assets/meem.png" alt="meem">
+                <img class="img-thumbnail" src="/assets/noon.png" alt="noon">
+                <img class="img-thumbnail" src="/assets/noon_accent.png" alt="noon_accent">
+                <img class="img-thumbnail" src="/assets/waaw.png" alt="waaw">
+                <img class="img-thumbnail" src="/assets/he_small.png" alt="he_small">
+                <img class="img-thumbnail" src="/assets/naareena_ye.png" alt="naareena_ye">
+                <img class="img-thumbnail" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
+                <img class="img-thumbnail" src="/assets/oogda_ye.png" alt="oogda_ye">
+                <img class="img-thumbnail" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
+                <img class="img-thumbnail" src="/assets/filee_ye.png" alt="filee_ye">
             </div>
         </div>
         
