--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
             </div>
         </nav>
 
-        <nav class="p-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
@@ -40,7 +40,7 @@
             </ol>
         </nav>
 
-        <div class="container-fluid mt-3">
+        <div class="container-fluid">
             <h1 class="text-center">Pashto Lessons</h1>
 
             <div class="d-flex flex-wrap flex-row mb-5">
