--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Lessons</title>
+        <title>The Pashto Alphabet</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/styles.css">
@@ -36,12 +36,12 @@
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/lessons/">Lessons</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Alphabet</li>
+                <li class="breadcrumb-item active" aria-current="page">The Alphabet</li>
             </ol>
         </nav>
 
         <div class="container-fluid">
-            <h1 class="text-center">Pashto Lessons</h1>
+            <h1 class="text-center">The Pashto Alphabet</h1>
 
             <div class="d-flex flex-wrap flex-row mb-5">
                 <p style="max-width: 86%;">The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
