--- a/pashto/index.html
+++ b/pashto/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,14 @@
             </div>
         </nav>
 
-        <div class="container-fluid mt-3">
+        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item active">Pashto</li>
+            </ol>
+        </nav>
+
+        <div class="container-fluid">
             <b>
                 <h1 class="text-center text-white">Learn Pashto</h1>
 
