--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" href="/pashto/">Pashto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/pashto/lessons/">Lessons <span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link active" href=".">Lessons <span class="visually-hidden">(current)</span></a>
                         </li>
                     </ul>
                 </div>
