--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -47,8 +47,8 @@
 
             <p>In linguistics, diacritics are marks that are added to letters to clarify how they are pronounced.
                 This can be helpful in languages like Pashto that are written in such a way that the pronunciation
-                of words might not be so obvious unless one already knows how to pronounce them. While diacritics
-                are usually not used in common Pashto writing, they can be occasionally seen here and there, and
+                of words might not be obvious unless one already knows how to pronounce them. While diacritics
+                are usually not used in common Pashto writing, they can sometimes be seen here and there, and
                 they are very useful in works like dictionaries to eliminate confusion about how to pronounce words.</p>
 
             <h2>The Pashto Diacritics</h2>
@@ -65,6 +65,23 @@
                 <img class="img-thumbnail" src="/assets/zwarakay.png" alt="zwarakay">
                 <img class="img-thumbnail" src="/assets/zer.png" alt="zer">
                 <img class="img-thumbnail" src="/assets/pex.png" alt="pex">
+            </div>
+
+            <h2>How Do They Work?</h2>
+            <p>These diacritics are basically placed on letters in different ways to show their pronunciations. In the images,
+                the dotted circles are where letters would be placed for each diacritic. To pronounce a letter with a diacritic,
+                the sound of the letter itself is pronounced first, and then the diacritic's sound follows shortly after. (If you
+                are unfamiliar with the alphabets and their sounds, I have a <a href="/pashto/lessons/alphabet/">lesson</a> on that.)
+            </p>
+
+            <p>Feel free to try out the example(s) below and guess what they should sound like.</p>
+
+            <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
+
+            <a class="btn btn-primary" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="diacritic_q1">Click to see the answer</a>
+
+            <div class="collapse" id="diacritic_q1">
+                <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
             </div>
         </div>
         
