--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>The Pashto Alphabet</title>
+        <title>Diacritics</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/styles.css">
@@ -78,7 +78,9 @@
 
             <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
 
-            <a class="btn btn-primary" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1">Click to see the answer</a>
+            <div class="mb-3">
+                <a class="btn btn-primary" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1">Click to see the answer</a>
+            </div>
 
             <div class="collapse" id="diacritic_q1">
                 <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
