--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -68,6 +68,7 @@
             </div>
 
             <h2>How Do They Work?</h2>
+
             <p>These diacritics are basically placed on letters in different ways to show their pronunciations. In the images,
                 the dotted circles are where letters would be placed for each diacritic. To pronounce a letter with a diacritic,
                 the sound of the letter itself is pronounced first, and then the diacritic's sound follows shortly after. (If you
@@ -76,11 +77,14 @@
 
             <p>Feel free to try out the example(s) below and guess what they should sound like.</p>
 
-            <div>
-                <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
-            </div>
+            <div class="d-flex flex-wrap gap-1 my-3">
 
-            <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer()">Click to see the answer</a>
+                <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
+                    <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
+                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer()">Click to see the answer</a>
+                </div>
+
+            </div>
 
             <div class="collapse" id="diacritic_q1">
                 <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
