--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -92,12 +92,16 @@
 
             </div>
 
-            <div class="collapse" id="diacritic_q1">
-                <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
-            </div>
+            <div class="d-flex flex-wrap gap-1 my-3">
 
-            <div class="collapse" id="diacritic_q2">
-                <img class="img-thumbnail" src="/assets/diacritic_a2.png" alt="Answer 2">
+                <div class="collapse" id="diacritic_q1">
+                    <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
+                </div>
+
+                <div class="collapse" id="diacritic_q2">
+                    <img class="img-thumbnail" src="/assets/diacritic_a2.png" alt="Answer 2">
+                </div>
+
             </div>
 
         </div>
